@@ -1,2 +1,2 @@
 rem Launch the Monitor application (args: JDBC connection string, user name, password and optional collector name)
-start javaw.exe -jar oee-apps-3.5.1.jar MONITOR jdbc:hsqldb:hsql://localhost/OEE SA  
+start %JAVA_HOME%/bin/javaw.exe -p %JAVAFX_HOME%\lib --add-modules javafx.controls,javafx.fxml,javafx.web -jar oee-apps-3.6.0.jar MONITOR jdbc:hsqldb:hsql://localhost/OEE SA  
